remove redundant haste-cli

--- a/packages/wix-ui-backoffice/package.json
+++ b/packages/wix-ui-backoffice/package.json
@@ -60,8 +60,7 @@
     "react-test-renderer": "^15.5.4",
     "react-test-utils": "0.0.1",
     "wix-ui-test-utils": "^1.0.0",
-    "haste-preset-yoshi": "latest",
-    "haste-cli": "~0.1.16"
+    "haste-preset-yoshi": "latest"
   },
   "babel": {
     "presets": [
