--- a/packages/wix-ui-theme/package.json
+++ b/packages/wix-ui-theme/package.json
@@ -32,12 +32,12 @@
   },
   "devDependencies": {
     "@types/jest": "^21.1.8",
-    "@types/react": "~15.6.0",
-    "@types/react-dom": "~15.5.0",
-    "enzyme": "~2.9.0",
-    "react-test-renderer": "~15.6.0",
-    "ts-jest": "^21.2.3",
-    "typescript": "~2.4.0",
+    "@types/react": "^15.6.7",
+    "@types/react-dom": "^15.5.6",
+    "enzyme": "^2.3.0",
+    "react-test-renderer": "^15.5.4",
+    "ts-jest": "^21.2.4",
+    "typescript": "^2.6.2",
     "haste-preset-yoshi": "latest"
   },
   "dependencies": {
