--- a/packages/wix-ui-theme/package.json
+++ b/packages/wix-ui-theme/package.json
@@ -36,14 +36,14 @@
     "@types/react-dom": "^15.5.6",
     "enzyme": "^2.3.0",
     "react-test-renderer": "^15.5.4",
-    "ts-jest": "^21.2.4",
+    "ts-jest": "^21.2.3",
     "typescript": "^2.6.2",
     "haste-preset-yoshi": "latest"
   },
   "dependencies": {
     "lodash.pickby": "^4.6.0",
-    "react": "15.6.1",
-    "react-dom": "15.6.1"
+    "react-dom": "^15.6.2",
+    "react-test-renderer": "^15.5.4"
   },
   "yoshi": {
     "externals": {
