--- a/packages/wix-storybook-utils/package.json
+++ b/packages/wix-storybook-utils/package.json
@@ -40,12 +40,12 @@
     "react": "^15.4.0"
   },
   "dependencies": {
-    "babel-runtime": "~6.25.0",
+    "babel-runtime": "^6.25.0",
     "copy-to-clipboard": "^3.0.8",
     "eslint-config-wix": "^1.1.16",
     "github-markdown-css": "^2.9.0",
     "highlight.js": "^9.12.0",
-    "import-path": "0.0.13",
+    "import-path": "^0.0.13",
     "react-docgen": "^2.20.0",
     "react-element-to-jsx-string": "^13.1.0",
     "react-remarkable": "^1.1.3",
@@ -55,17 +55,16 @@
   "devDependencies": {
     "@storybook/addon-options": "^3.2.16",
     "@storybook/react": "^3.2.16",
-    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "~4.1.0",
-    "enzyme": "~2.9.0",
+    "enzyme": "^2.9.0",
     "haste-preset-yoshi": "latest",
     "identity-obj-proxy": "^3.0.0",
-    "jsdom": "~11.1.0",
-    "prop-types": "~15.6.0",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-test-renderer": "~15.6.0"
+    "jsdom": "^11.1.0",
+    "prop-types": "^15.6.0",
+    "react": "^15.5.0",
+    "react-dom": "^15.5.0",
+    "react-test-renderer": "^15.5.4"
   },
   "babel": {
     "plugins": [
