resolve multiple deps

--- a/packages/wix-ui-tpa/package.json
+++ b/packages/wix-ui-tpa/package.json
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@storybook/addon-options": "3.2.13",
-    "@storybook/react": "~3.1.0",
-    "@storybook/storybook-deployer": "~2.0.0",
+    "@storybook/react": "^3.2.16",
+    "@storybook/storybook-deployer": "^2.0.0",
     "@types/color": "^2.0.0",
     "@types/jest": "^21.1.8",
     "@types/react": "^15.6.7",
@@ -46,14 +46,14 @@
     "@types/storybook__react": "^3.0.5",
     "enzyme": "^2.3.0",
     "gh-pages-auto-release": "^1.1.2",
-    "import-path": "^0.0.10",
+    "import-path": "latest",
     "prop-types": "^15.5.4",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
     "react-test-renderer": "^15.5.4",
     "ts-jest": "^21.2.4",
     "typescript": "^2.6.2",
-    "wix-ui-test-utils": "^1.0.7",
+    "wix-ui-test-utils": "latest",
     "haste-preset-yoshi": "latest"
   },
   "license": "MIT",
