--- a/packages/wix-ui-core/package.json
+++ b/packages/wix-ui-core/package.json
@@ -38,22 +38,22 @@
   },
   "devDependencies": {
     "@storybook/addon-options": "3.2.13",
-    "@storybook/react": "~3.1.0",
-    "@storybook/storybook-deployer": "~2.0.0",
+    "@storybook/react": "^3.2.16",
+    "@storybook/storybook-deployer": "^2.0.0",
     "@types/jest": "^21.1.8",
     "@types/react": "^15.6.7",
     "@types/react-dom": "^15.5.6",
     "enzyme": "^2.3.0",
     "gh-pages-auto-release": "^1.1.2",
     "haste-preset-yoshi": "latest",
-    "import-path": "^0.0.7",
-    "prop-types": "^15.6.0",
-    "react": "^15.5.0",
+    "import-path": "latest",
+    "prop-types": "^15.5.4",
+    "react": "^15.4.0",
     "react-dom": "^15.5.0",
     "react-test-renderer": "^15.5.4",
     "ts-jest": "^21.2.4",
     "typescript": "^2.6.2",
-    "wix-ui-test-utils": "^1.0.7"
+    "wix-ui-test-utils": "latest"
   },
   "babel": {
     "presets": [
