--- a/packages/wix-ui-santa/package.json
+++ b/packages/wix-ui-santa/package.json
@@ -40,8 +40,8 @@
   },
   "devDependencies": {
     "@storybook/addon-options": "3.2.13",
-    "@storybook/react": "~3.1.0",
-    "@storybook/storybook-deployer": "~2.0.0",
+    "@storybook/react": "^3.2.16",
+    "@storybook/storybook-deployer": "^2.0.0",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.5.2",
@@ -52,13 +52,12 @@
     "eslint-plugin-react": "^6.8.0",
     "gh-pages-auto-release": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
-    "import-path": "^0.0.13",
-    "jsdom": "^9.4.1",
+    "import-path": "latest",
     "prop-types": "^15.5.4",
-    "react": "^15.5.0",
+    "react": "^15.4.0",
     "react-dom": "^15.5.0",
     "react-test-renderer": "^15.5.4",
-    "wix-ui-test-utils": "^1.0.0",
+    "wix-ui-test-utils": "latest",
     "haste-preset-yoshi": "latest"
   },
   "babel": {
