Import typescript helper methods to reduce bundle size

--- a/packages/wix-ui-core/package.json
+++ b/packages/wix-ui-core/package.json
@@ -49,6 +49,7 @@
     "react-popper": "0.10.1",
     "react-portal": "^4.1.5",
     "react-transition-group": "^2.2.1",
+    "tslib": "^1.9.3",
     "wix-ui-jss": "^1.0.0",
     "wix-ui-test-utils": "^1.0.0"
   },
