--- a/packages/wix-ui-core/package.json
+++ b/packages/wix-ui-core/package.json
@@ -76,6 +76,7 @@
     "gh-pages-auto-release": "latest",
     "identity-obj-proxy": "^3.0.0",
     "import-path": "latest",
+    "jsdom-global": "^3.0.2",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.0",
     "protractor": "^5.3.0",
