--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-element-to-jsx-string": "^13.2.0",
     "react-motion": "^0.5.2",
     "react-remarkable": "^1.1.3",
-    "recast": "^0.14.7"
+    "recast": "^0.14.7",
+    "wix-style-react": "^4.11.1"
   },
   "devDependencies": {
     "@storybook/addon-options": "^3.2.16",
@@ -76,7 +77,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-test-renderer": "^16.3.1",
-      "yoshi": "^1.2.0"
+    "yoshi": "^1.2.0"
   },
   "babel": {
     "plugins": [
